--- a/.github/workflows/continuous-build.yml
+++ b/.github/workflows/continuous-build.yml
@@ -57,7 +57,7 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add src/generated/projects.ts
           git commit -a -m "update projects ts file"
-          git push
+          git push origin ${{ github.head_ref || github.ref_name }}
 
       - name: Commit projects.ts
         run: yarn validate
